--- a/homepageTest/Base.lproj/Main.storyboard
+++ b/homepageTest/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="ddW-wI-zcA">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--Rsh View Controller-->
@@ -9,8 +9,8 @@
             <objects>
                 <viewController storyboardIdentifier="loginVC" id="vXZ-lx-hvc" customClass="rshViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="3we-8H-IDW"/>
-                        <viewControllerLayoutGuide type="bottom" id="bgw-x6-gU3"/>
+                        <viewControllerLayoutGuide type="top" id="6nO-dJ-K2q"/>
+                        <viewControllerLayoutGuide type="bottom" id="gAD-y7-UuW"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -105,8 +105,8 @@
             <objects>
                 <viewController storyboardIdentifier="PageContentViewController" id="4Oa-Qs-Ov6" customClass="PageContentViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="1yx-0b-Tjl"/>
-                        <viewControllerLayoutGuide type="bottom" id="5mm-mW-AqW"/>
+                        <viewControllerLayoutGuide type="top" id="zQs-kS-gBd"/>
+                        <viewControllerLayoutGuide type="bottom" id="DC3-df-bF4"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="30u-Og-mrg">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -140,8 +140,8 @@
             <objects>
                 <viewController id="PMg-Uy-UyX" customClass="addNewAgentViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="aZu-4A-3kt"/>
-                        <viewControllerLayoutGuide type="bottom" id="H38-FB-Nqv"/>
+                        <viewControllerLayoutGuide type="top" id="QM8-0s-daN"/>
+                        <viewControllerLayoutGuide type="bottom" id="XLu-do-u1n"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="HDG-63-Tgm">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -369,8 +369,8 @@
             <objects>
                 <viewController id="ySU-Ei-of2" customClass="rshChatViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Myq-an-Pzn"/>
-                        <viewControllerLayoutGuide type="bottom" id="oRW-DY-Aej"/>
+                        <viewControllerLayoutGuide type="top" id="yno-SN-nly"/>
+                        <viewControllerLayoutGuide type="bottom" id="E8P-jl-OuD"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="gj1-KZ-5mh">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -389,8 +389,8 @@
             <objects>
                 <viewController id="Cki-YI-DIi" customClass="joinViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="PuZ-Fa-Ydy"/>
-                        <viewControllerLayoutGuide type="bottom" id="JZ1-Sn-np6"/>
+                        <viewControllerLayoutGuide type="top" id="Ow6-E9-WTp"/>
+                        <viewControllerLayoutGuide type="bottom" id="CEl-hY-1Od"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="whT-6l-E1Y">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -461,8 +461,8 @@
             <objects>
                 <viewController id="ddW-wI-zcA" customClass="RootViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="i8q-vT-Mnc"/>
-                        <viewControllerLayoutGuide type="bottom" id="szN-oR-TIP"/>
+                        <viewControllerLayoutGuide type="top" id="Jac-QZ-ZzU"/>
+                        <viewControllerLayoutGuide type="bottom" id="5KQ-L8-Ubf"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="jwS-HQ-pdZ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
